Updating APIs